# EnglishCourses

./: README.md
LanguageCourses/: .env  Changelog.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
LanguageCourses/migration/: env.py
LanguageCourses/migration/versions/: 106014ebbceb_.py  470992da094d_initial.py  a336ba500fcb_.py
LanguageCourses/scripts/: create_user_table.sql
LanguageCourses/src/: main.py  start.sh
LanguageCourses/src/project/api/: routes.py
LanguageCourses/src/project/core/: config.py
LanguageCourses/src/project/infrastructure/postgres/: database.py  models.py
LanguageCourses/src/project/infrastructure/postgres/repository/: change_of_groups_repo.py  course_repo.py  courses_raiting_repo.py  group_repo.py  lesson_repo.py  payment_repo.py  schedule_repo.py  stream_repo.py  teacher_repo.py  teachers_raiting_repo.py  user_repo.py  users_and_groups_repo.py  users_has_schedule_repo.py
LanguageCourses/src/project/infrastructure/security/: auth.py
LanguageCourses/src/project/schemas/: change_of_groups.py  course.py  courses_raiting.py  group.py  lesson.py  login.py  payment.py  register.py  schedule.py  stream.py  teacher.py  teachers_raiting.py  user.py  users_and_groups.py  users_has_schedule.py
